Add Completed First HW Assignment
Uploading completed first homework assignment with fully functioning website.

--- a/Basic-Portfolio/assets/css/style.css
+++ b/Basic-Portfolio/assets/css/style.css
@@ -1,32 +1,54 @@
-.sections {
-    padding: 20px;
-    margin: 0px;
+body {
+    width: 960px;
+    background-image: url('./../images/spirationlight/spiration-light.png')
 }
-.header {
-border-bottom: solid;
-}
-#name {
-    text-align: left;
-    font-family: Georgia;
-    width:250px;
-    padding: 10px 0px 10px 15px;
-    color: #ffffff;
-    background-color: #4aaaa5;
-    margin-left: 300px;
-}
-.links ul li {
-    padding: 10px;
-    list-style-type: none;
-    float: right;
-    top:0;
-    right:0;
-    display: inline;
-    overflow: auto;
-}
-.aboutme {
-    margin-left: 300px;
-    width: 650px;
-    float: left;
-}
-.letsconnect {
-    float: right;
+
+header {
+    
+        padding-bottom: 0px;
+        border-bottom: solid;
+        border-bottom-width: 100%;
+    }
+    #name {
+        margin-left: 25%;
+        margin-right: 450px;
+        font-size: 30px;
+        font-weight: bold;
+        padding: 25px;
+        background-color: #4aaaa5;
+        color: #ffffff;
+    }
+    .links {
+        display: inline-block;
+        margin-left: 50%;
+    }
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+    li {
+        padding: 10px;
+    }
+    .entirecontent {
+        margin-top: 25px;
+        width: 650px;
+    
+    }
+    .aboutme {
+    }
+    h2 {
+        
+        font-size: 30px;
+        font-weight: bold;
+        color: #4aaaa5;
+        padding-left: 25px;
+        padding-right: 350px;
+        padding-top: 25px;
+        padding-bottom: 25px;
+        border-bottom: solid;
+        border-bottom-color: black;
+        margin-bottom: 25px;
+    }
+
+
